[tool.poetry]
name = "baidu-pan"
version = "0.1.0"
description = ""
authors = ["markshawn2020 <shawninjuly@gmail.com>"]
readme = "README.md"
packages = [{include = "baidu_pan"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
scrapy-redis = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
